# may-walk

./: .gitignore  index.html  pyproject.toml  style.css
.github/workflows/: backend-ci.yml  ci.yml
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260424_000001_enable_postgis.py  20260424_000002_create_mvp_schema.py  20260425_000001_limit_admin_user_to_single_row.py
backend/src/may_walk/: __init__.py  cli.py  main.py
backend/src/may_walk/api/: __init__.py  dependencies.py  router.py
backend/src/may_walk/api/routers/: __init__.py  auth.py  authentication.py  health.py
backend/src/may_walk/core/: __init__.py  passwords.py  settings.py
backend/src/may_walk/db/: __init__.py  base.py  session.py
backend/src/may_walk/models/: __init__.py  admin_user.py  auth_session.py  reference_segment.py  route.py
backend/src/may_walk/schemas/: __init__.py  auth.py  authentication.py  health.py
backend/src/may_walk/services/: __init__.py  admin.py  auth.py
backend/tests/: conftest.py
backend/tests/api/: test_authentication.py  test_health.py
backend/tests/db/: test_schema.py
js/: app.js  layers.js  map.js
src/may-walk/static/js/: dom.js  tools.js
