[project]
name = "may-walk"
version = "0.1.0"
description = "Веб-приложение для разработки, сохранения и правки маршрутов для ежегодного мероприятия майская прогулка."
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "ruff~=0.15",
]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "N", "ARG"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ARG"]
